--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		<div class="contentheader">
 			<p class="fontheadup"> your next product development company</p>
 			<p class="fontheaddown">Sign Up Now & Get one month premium membership for free!</p>
-			<input type="button" name="get membership" value="get me membership for free" class="buttonhead">
+			<button type="submit" name="get membership" alt="get me membership for free" class="buttonhead">
+				<span class="buttonheadfont">get me membership for free</span>
+			</button>
 		</div>
 	</header>
 
@@ -58,10 +60,22 @@
 
 <!--intro-->
 	<div class="intro">
+		<div class="introleft">
+		</div>
+		<div class="introright">
+		</div>
+		<div class="introdown">
+		</div>
 	</div>
 
 <!--sevices-->
 	<div class="services">
+		<div class="service">
+		</div>
+		<div class="service">
+		</div>
+		<div class="service">
+		</div>
 	</div>
 
 <!--counter-->
@@ -70,14 +84,35 @@
 
 <!--latest products-->
 	<div class="latest">
+		<div class="latestup">
+		</div>
+		<div class="latestleft">
+		</div>
+		<div class="latestright">
+		</div>
+		
 	</div>
 
 <!--news-->
 	<div class="news">
+		<div class="newsleft">
+		</div>
+		<div class="newsright">
+		</div>
+		<div class="newsdown">
+		</div>
 	</div>
 
 <!--help & support-->
 	<div class="support">
+		<div class="supportup">
+		</div>
+		<div class="supportdown">
+		</div>
+		<div class="supportdown">
+		</div>
+		<div class="supportdown">
+		</div>
 	</div>
 
 	</main>	
