--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--banner-->
 	<header>
 		<div class="logotype">
-			<img src="img/uisumo.png" alt="uisumo">
+			<a href="#"><img src="img/uisumo.png" alt="uisumo"></a>
 		</div>
 		<nav>
 			<ul>
@@ -61,30 +61,68 @@
 <!--intro-->
 	<div class="intro">
 		<div class="introleft">
+			<p class="introfont1" align="left">we help brand to</p>
+			<p class="introfont3" align="left">Grow next level business</p>
+			<p class="introfont5" align="left">Here's why we're the #1 MOST trusted digital marketplace company in the worldwide</p>
+			<p class="introfont4" align="left">What do all consultants need?In short, trust. This is achieved with professional presentation and the ability to communicate clearly with existing and potential clients. Whether you are an accountant.</p>
+			<button type="submit" name="discover more" alt="discover more" class="buttonintro">
+				<span class="buttonheadfont">discover more</span>
+			</button>
 		</div>
 		<div class="introright">
 		</div>
 		<div class="introdown">
+			<img src="img/iconmessage.png">
+			<p class="introfont1">why over 50k people choose us</p>
+			<p class="introfont2">"What do all consultants need? In short, trust. This is achieved with professional presentation and the ability to communicate clearly wiyh existing and potential trendy worldwide clients way of tired now & all."</p>
+			<p class="introfont1"><strong>tim anderson</strong> (director)</p>
 		</div>
 	</div>
 
 <!--sevices-->
 	<div class="services">
 		<div class="service">
+			<img src="img/iconlamp.png">
+			<p class="servicefont1">pixel perfom design</p>
+			<p class="servicefont2">This is achieved with professional presentation and the ability to communicate clearly wiyh existing and potential clients.</p>
 		</div>
 		<div class="service">
+			<img src="img/iconspeed.png">
+			<p class="servicefont1">sEO optimized</p>
+			<p class="servicefont2">This is achieved with professional presentation and the ability to communicate clearly wiyh existing and potential clients.</p>
 		</div>
 		<div class="service">
+			<img src="img/iconmic.png">
+			<p class="servicefont1">dedicated support</p>
+			<p class="servicefont2">This is achieved with professional presentation and the ability to communicate clearly wiyh existing and potential clients.</p>
 		</div>
 	</div>
 
 <!--counter-->
 	<div class="counter">
+		<img src="img/notebook.png" alt="notebook">
+		<div class="counterright">
+			<p class="counterfont">some statistical facts</p>
+			<div class="counterstat">
+				<p class="counterstatfont1">25K</p>
+				<p class="counterstatfont2">happy customers</p>
+			</div>
+			<div class="counterstat">
+				<p class="counterstatfont1">9083</p>
+				<p class="counterstatfont2">ticket solved</p>
+			</div>
+			<div class="counterstat">
+				<p class="counterstatfont1">9/10</p>
+				<p class="counterstatfont2">average rating</p>
+			</div>
+		</div>
 	</div>
 
 <!--latest products-->
 	<div class="latest">
 		<div class="latestup">
+			<p class="latestfont1">latest products</p>
+			<p class="latestfont2">Your next level Product development company assets</p>
 		</div>
 		<div class="latestleft">
 		</div>
@@ -106,12 +144,32 @@
 <!--help & support-->
 	<div class="support">
 		<div class="supportup">
+			<p class="supportfont1">help & support</p>
+			<p class="supportfont2">Find answers to all of your questions here.</p>
 		</div>
 		<div class="supportdown">
+			<img src="img/iconsupport.png">
+			<p class="supportdownfont1">support</p>
+			<p class="supportdownfont2">Contact our experts and solve your problems immediately</p>
+			<button type="submit" name="forum" alt="forum" class="buttonforum">
+				<span class="buttonforumfont">forum</span>
+			</button>
 		</div>
 		<div class="supportdown">
+			<img src="img/icondocument.png">
+			<p class="supportdownfont1">documentation</p>
+			<p class="supportdownfont2">Learn how to use Theme from our Users Guide</p>
+			<button type="submit" name="document" alt="learn more" class="buttondocument">
+				<span class="buttonforumfont">learn more</span>
+			</button>
 		</div>
 		<div class="supportdown">
+			<img src="img/iconvideo.png">
+			<p class="supportdownfont1">tutorials</p>
+			<p class="supportdownfont2">Learn how to use Products with video tutorials</p>
+			<button type="submit" name="document" alt="watch now" class="buttonvideo">
+				<span class="buttonforumfont">watch now</span>
+			</button>
 		</div>
 	</div>
 
