add div news-newsleft

--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
 <!--news-->
 	<div class="news">
 		<div class="newsleft">
+			<p class="newsleftfont1">request call back</p>
+			<p class="newsleftfont2">What do all consultants need?In short, trust. This is achieved with professional and the ability to communicate.</p>
+			<form>
+				<input class="formnews" type="text" placeholder="How can we help?">
+				<input class="formnews" type="text" placeholder="Your name">
+				<input class="formnews" type="text" placeholder="Your e-mail">
+			</form>
+			<button type="submit" name="request" alt="submit" class="buttonnewsleft">
+				<span class="buttonnewsleftfont">submit</span>
+			</button>
 		</div>
 		<div class="newsright">
 		</div>
