--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--banner-->
 	<header>
 		<div class="logotype">
-			<a href="#"><img src="img/uisumo.png" alt="uisumo"></a>
+			<a href="#"><div class="uisumo" alt="uisumo"></div>
 		</div>
 		<nav>
 			<ul>
@@ -36,23 +36,23 @@
 	<div class="logos">
 		<div class="logo">
 			<p class="fontlogo">laravel</p>
-			<img src="img/logo1.png" alt="logo1" width="90px" height="90px">
+			<div class="logo1"></div>
 		</div>
 		<div class="logo">
 			<p class="fontlogo">wordpress</p>
-			<img src="img/logo2.png" alt="logo2" width="90px" height="90px">
+			<div class="logo2"></div>
 		</div>
 		<div class="logo">
 			<p class="fontlogo">angularjs</p>
-			<img src="img/logo3.png" alt="logo3" width="90px" height="90px">
+			<div class="logo3"></div>
 		</div>
 		<div class="logo">
 			<p class="fontlogo">node js</p>
-			<img src="img/logo4.png" alt="logo4" width="90px" height="90px">
+			<div class="logo4"></div>
 		</div>
 		<div class="logo">
 			<p class="fontlogo">ionic</p>
-			<img src="img/logo5.png" alt="logo5" width="90px" height="90px">
+			<div class="logo5"></div>
 		</div>
 	</div>
 
@@ -72,7 +72,7 @@
 		<div class="introright">
 		</div>
 		<div class="introdown">
-			<img src="img/iconmessage.png">
+			<div class="iconmessage"></div>
 			<p class="introfont1">why over 50k people choose us</p>
 			<p class="introfont2">"What do all consultants need? In short, trust. This is achieved with professional presentation and the ability to communicate clearly wiyh existing and potential trendy worldwide clients way of tired now & all."</p>
 			<p class="introfont1"><strong>tim anderson</strong> (director)</p>
@@ -82,17 +82,17 @@
 <!--sevices-->
 	<div class="services">
 		<div class="service">
-			<img src="img/iconlamp.png">
+			<div class="iconlamp"></div>
 			<p class="servicefont1">pixel perfom design</p>
 			<p class="servicefont2">This is achieved with professional presentation and the ability to communicate clearly wiyh existing and potential clients.</p>
 		</div>
 		<div class="service">
-			<img src="img/iconspeed.png">
+			<div class="iconspeed"></div>
 			<p class="servicefont1">sEO optimized</p>
 			<p class="servicefont2">This is achieved with professional presentation and the ability to communicate clearly wiyh existing and potential clients.</p>
 		</div>
 		<div class="service">
-			<img src="img/iconmic.png">
+			<div class="iconmic"></div>
 			<p class="servicefont1">dedicated support</p>
 			<p class="servicefont2">This is achieved with professional presentation and the ability to communicate clearly wiyh existing and potential clients.</p>
 		</div>
@@ -158,7 +158,7 @@
 			<p class="supportfont2">Find answers to all of your questions here.</p>
 		</div>
 		<div class="supportdown">
-			<img src="img/iconsupport.png">
+			<div class="iconsupport"></div>
 			<p class="supportdownfont1">support</p>
 			<p class="supportdownfont2">Contact our experts and solve your problems immediately</p>
 			<button type="submit" name="forum" alt="forum" class="buttonforum">
@@ -166,7 +166,7 @@
 			</button>
 		</div>
 		<div class="supportdown">
-			<img src="img/icondocument.png">
+			<div class="icondocument"></div>
 			<p class="supportdownfont1">documentation</p>
 			<p class="supportdownfont2">Learn how to use Theme from our Users Guide</p>
 			<button type="submit" name="document" alt="learn more" class="buttondocument">
@@ -174,7 +174,7 @@
 			</button>
 		</div>
 		<div class="supportdown">
-			<img src="img/iconvideo.png">
+			<div class="iconvideo"></div>
 			<p class="supportdownfont1">tutorials</p>
 			<p class="supportdownfont2">Learn how to use Products with video tutorials</p>
 			<button type="submit" name="document" alt="watch now" class="buttonvideo">
@@ -188,10 +188,10 @@
 <!--footer-->
 	<footer>
 		<div class="footlogos">
-			<a href="#"><img src="img/iconfacebook.png" alt="facebook"></a>
-			<a href="#"><img src="img/icontwitter.png" alt="twitter"></a>
-			<a href="#"><img src="img/iconlinkedin.png" alt="linkedin"></a>
-			<a href="#"><img src="img/icongoogle.png" alt="google+"></a>
+			<a href="#"><div class="iconfacebook"></div></a>
+			<a href="#"><div class="icontwitter"></div></a>
+			<a href="#"><div class="iconlinkedin"></div></a>
+			<a href="#"><div class="icongoogle"></div></a>
 		</div>
 		<address>
 			@2017 UISUMO Web Solutions. All Rights Reserved.
