--- a/index.html
+++ b/index.html
@@ -125,6 +125,26 @@
 			<p class="latestfont2">Your next level Product development company assets</p>
 		</div>
 		<div class="latestleft">
+			<p align="left">
+				<a href="#">01</a>
+				<a href="#">02</a>
+				<a href="#">03</a>
+				<a href="#">04</a>
+				<a href="#">05</a>
+			</p>
+			<p class="fontlatestleft1">vanilla wp theme</p>
+			<p class="fontlatestleft2">What do all consultants need? In shorts, trust. This is achieved with professional presentation and the ability to communicate.</p>
+			<p class="fontlatestleft3">last update: january9, 2017</p>
+			<p class="fontlatestleft3">browser: ie9+, firefox, safari, opera, chrome</p>
+			<p class="fontlatestleft3">requirements: wordpress 4.7.1</p>
+			<p align="left">
+				<button type="submit" name="demo" alt="demo" class="buttondemo">
+					<span class="buttondemofont">demo</span>
+				</button>
+					<button type="submit" name="buy theme" alt="buy theme" class="buttonbuy">
+					<span class="buttonbuyfont">buy theme</span>
+				</button>
+			</p>
 		</div>
 		<div class="latestright">
 		</div>
@@ -145,9 +165,15 @@
 				<span class="buttonnewsleftfont">submit</span>
 			</button>
 		</div>
-		<div class="newsright">
-		</div>
+
 		<div class="newsdown">
+			<p class="fontnewsdown1"><strong>company news</strong></p>
+				<div class="newsdownblock1"></div>
+				<div class="newsdownblock2"></div>
+			<p class="fontnewsdown1">frecuently asked question?</p>
+			<p class="fontnewsdown2">Is there an auto renew subscription?<a href="#"><img src="img/iconplus.png"></a> </p><hr>
+			<p class="fontnewsdown2">Can I upgrade to Themes Club from a ThemeForest purchase?<a href="#"><img src="img/iconplus.png"></a></p><hr>
+			<p class="fontnewsdown2">How many sites can I use my themes on?<a href="#"><img src="img/iconplus.png"></a></p><hr>
 		</div>
 	</div>
 
