--- a/catalog.html
+++ b/catalog.html
@@ -14,10 +14,10 @@
               <a href="index.html" class="nerds"></a>
             </div>
 			<ul>
-				<li><a href="#">студия</a></li>
+				<li><a href="index.html">студия</a></li>
 				<li><a href="#">клиенты</a></li>
-				<li><a href="catalog.html">магазин</a></li>
-				<li><a href="#">контакты</a></li>
+				<li><a href="catalog.html" class="active">магазин</a></li>
+				<li><a href="#contacts">контакты</a></li>
 				<li><a href="#">корзина</a></li>
 			</ul>
             <p class="fontheadercat">Магазин готовых шаблонов</p>
@@ -49,18 +49,22 @@
 
                 <div class="grid">
                     <p class="fontproperties1">сетка:</p>
-                    <div><input type="radio" name="variant1" value="v1" id="v1"><label for="v1" class="fontproperties2">адаптивная</label></div>
-                    <div><input type="radio" name="variant2" value="v2" id="v2"><label for="v2" class="fontproperties2">фиксированная</label></div>
-                    <div><input type="radio" name="variant3" value="v3" id="v3"><label for="v3" class="fontproperties2">резиновая</label></div>
+                      <form>
+                        <div class="wrapgrid"><input type="radio" name="variant1" value="v1" id="v1"><label for="v1" class="fontproperties2">адаптивная</label></div>
+                        <div class="wrapgrid"><input type="radio" name="variant2" value="v2" id="v2"><label for="v2" class="fontproperties2">фиксированная</label></div>
+                        <div class="wrapgrid"><input type="radio" name="variant3" value="v3" id="v3"><label for="v3" class="fontproperties2">резиновая</label></div>
+                      </form>
                 </div>
 
                 <div class="properties">
                     <p class="fontproperties1">особенности:</p>
-                    <div> <input type="checkbox" name="option1" value="p1" id="p1"><label for="p1" class="fontproperties2">слайдер</label></div>
-                    <div><input type="checkbox" name="option2" value="p2" id="p2"><label for="p2" class="fontproperties2">блок преимуществ</label></div>
-                    <div><input type="checkbox" name="option3" value="p3" id="p3"><label for="p3" class="fontproperties2">новости</label></div>
-                    <div><input type="checkbox" name="option4" value="p4" id="p4"><label for="p4" class="fontproperties2">галерея</label></div>
-                    <div><input type="checkbox" name="option5" value="p5" id="p5"><label for="p5" class="fontproperties2">корзина</label></div>
+                      <form>
+                        <div class="wrapprop"><input type="checkbox" name="option1" value="p1" id="p1"><label for="p1" class="fontproperties2">слайдер</label></div>
+                        <div class="wrapprop"><input type="checkbox" name="option2" value="p2" id="p2"><label for="p2" class="fontproperties2">блок преимуществ</label></div>
+                        <div class="wrapprop"><input type="checkbox" name="option3" value="p3" id="p3"><label for="p3" class="fontproperties2">новости</label></div>
+                        <div class="wrapprop"><input type="checkbox" name="option4" value="p4" id="p4"><label for="p4" class="fontproperties2">галерея</label></div>
+                        <div class="wrapprop"><input type="checkbox" name="option5" value="p5" id="p5"><label for="p5" class="fontproperties2">корзина</label></div>
+                      </form>
                 </div>
                 <button type="submit" name="show" alt="show" class="buttonshow">показать</button>
             </div>
@@ -128,20 +132,40 @@
                     <a href="#">3</a>
                 </div>
                 <button type="submit" name="next" alt="next" class="buttonnext">следующая</button>
+                 <a name="contacts"></a>
             </div>
+            
 
 
-            <div class="map">
-                <div class="foundus">
-                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2ee70a2e2be2fd47ef15c1600d56e0e2c3b91c9f6782af442c60b361f3baac64&amp;width=100%25&amp;height=420&amp;lang=ru_RU&amp;scroll=true"></script>
-                </div>
-                <div class="writeus">
-                    <p class="fontmap1">nerds design studio </p>
-                    <p class="fontmap2">191186, Санкт-Петербург, ул. Б. Конюшенная, д.19.8 </p>
-                    <p class="fontmap2">тел. +7 (812) 275-75-75 </p>
-                    <button type="submit" name="writeus" alt="writeus" class="buttonmap">напишите нам</button>
-                </div>
+        <div class="map">
+            <div class="foundus">
+              <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A2ee70a2e2be2fd47ef15c1600d56e0e2c3b91c9f6782af442c60b361f3baac64&amp;width=100%25&amp;height=420&amp;lang=ru_RU&amp;scroll=true"></script>
             </div>
+            <div class="writeus">
+                <p class="fontmap1">nerds design studio </p>
+                <p class="fontmap2">191186, Санкт-Петербург, ул. Б. Конюшенная, д.19.8 </p>
+                <p class="fontmap2">тел. +7 (812) 275-75-75 </p>
+                <button type="submit" name="writeus" alt="writeus"  class="buttonmap" >напишите нам</button>
+            </div>
+            
+            <div class="writeusform">
+                <button type="close" name="close" alt="close" class="buttonclose">X</button>
+                <p class="fontwriteusform1">Напишите нам</p>
+                <form>
+                    <div class="inputform">
+                        <label for="name" class="fontwriteusform2">Ваше имя:</label>
+                        <input type="text" placeholder="Представьтесь,пожалуйста" class="inputwriteus1" id="name">
+                    </div>
+                    <div class="inputform">
+                        <label for="name" class="fontwriteusform2">Ваш e-mail:</label>
+                        <input type="text" placeholder="Для отправки ответа" class="inputwriteus1" id="mail">
+                    </div>
+                    <label for="name" class="fontwriteusform2">Текст письма:</label>
+                    <input type="text" placeholder="В свободной форме" class="inputwriteus2" id="message">
+                    <button type="submit" name="sell" alt="sell" class="buttonwriteus1">отправить</button>
+            </div>
+
+        </div>
 
         </main>
         <footer>
@@ -161,5 +185,7 @@
             <p class="fontfooter2">Скидка 10% для друзей из социальных сетей.</p>
         </div>
         </footer>
+
+        <script src="js/script.js"></script>
     </body>
 </html>
